@@ -26,7 +26,11 @@
   - feature: at attribute alignTime added
   - feature: FHEMWEB attribute values via dropdown, slider for dimmer
   - feature: new attribute group for FHEMWEB (Boris)
-  - change:  11_FHT.pm, 50_WS300.pm, 59_Weather.pm migrated to redingsUpdate mechanism (Boris)
+  - change:  11_FHT.pm, 50_WS300.pm, 59_Weather.pm migrated to redingsUpdate
+             mechanism (Boris)
+  - change:  updatefhem modifications to support a clean install of fhem and
+             pgm2 installation, see commandref.html (M. Fischer)
+  - change:  FHEMWEB support for the new www/pgm2 directroy added (M. Fischer)
 
 - 2011-12-31 (5.2)
   - bugfix:  applying smallscreen attributes to firefox/opera
